--- a/Spark RDF Analyzer - Standalone Version/pom.xml
+++ b/Spark RDF Analyzer - Standalone Version/pom.xml
@@ -2,48 +2,47 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>rdfanalyzer</groupId>
-  <artifactId>spark-rdfanalyzer2</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
+	<artifactId>spark-rdfanalyzer2</artifactId>
+	<version>1.0</version>
 
-  <name>spark-rdfanalyzer2</name>
-  <url>http://www.uni-freiburg.de</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+		<!-- Run mvn install -Dp.type=war to create a war instead of a jar. -->
+		<p.type>jar</p.type>
+	</properties>
+
+	<packaging>${p.type}</packaging>
+
+	<name>spark-rdfanalyzer2</name>
+	<url>http://www.uni-freiburg.de</url>
+
 	<repositories>
-		
-		 <repository>
-      <id>cloudera</id>
-      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-    </repository>
+		<repository>
+			<id>cloudera</id>
+			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+		</repository>
 	</repositories>
-	
-	
 
-	
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.10</artifactId>
+			<version>1.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.10</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 
-		
-		 <dependency>
-    	<groupId>org.apache.spark</groupId>
-    	<artifactId>spark-core_2.10</artifactId>
-    	<version>1.5.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.apache.spark</groupId>
-    	<artifactId>spark-sql_2.10</artifactId>
-    	<version>1.5.1</version>
-    </dependency>   
-  
-    <dependency>
-    	<groupId>org.apache.hadoop</groupId>
-    	<artifactId>hadoop-client</artifactId>
-    	<version>2.5.0-cdh5.3.0</version>
-    </dependency>
-    
-    		<dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>2.5.0-cdh5.3.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
@@ -55,13 +54,12 @@
 			<artifactId>jersey-server</artifactId>
 			<version>1.8</version>
 		</dependency>
-    
-    <dependency>
-    <groupId>commons-codec</groupId>
-    <artifactId>commons-codec</artifactId>
-    <version>1.6</version>
-</dependency>
 
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -76,5 +74,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
