Updates artifacts to current versions.

--- a/Spark RDF Analyzer - Standalone Version/pom.xml
+++ b/Spark RDF Analyzer - Standalone Version/pom.xml
@@ -7,6 +7,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<hadoop.version>2.6.0-cdh5.9.0</hadoop.version>
+		<spark.version>1.6.0-cdh5.9.0</spark.version>
 
 		<!-- Run mvn install -Dp.type=war to create a war instead of a jar. -->
 		<p.type>jar</p.type>
@@ -26,44 +28,39 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>${hadoop.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.5.1</version>
+			<version>${spark.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>1.5.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-client</artifactId>
-			<version>2.5.0-cdh5.3.0</version>
+			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
+			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>1.8</version>
 		</dependency>
 
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.6</version>
+			<version>1.10</version>
 		</dependency>
 	</dependencies>
 
 	<build>
-		<finalName>RESTfulExample</finalName>
+		<!-- Name the WAR file "ROOT" to have it run as Tomcat's native app. -->
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
