--- a/Spark RDF Analyzer - Standalone Version/pom.xml
+++ b/Spark RDF Analyzer - Standalone Version/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.xerial.snappy</groupId>
+			<artifactId>snappy-java</artifactId>
+			<version>1.1.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
