--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,14 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	 <filter>
+	   <filter-name>CorsFilter</filter-name>
+	   <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+	 </filter>
+	 <filter-mapping>
+	   <filter-name>CorsFilter</filter-name>
+	   <url-pattern>/*</url-pattern>
+	 </filter-mapping>
 
 	<listener>
 		<listener-class>rdfanalyzer.spark.DeploymentListener</listener-class>
