--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>snappy-java</artifactId>
 			<version>1.1.1.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
