--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 	<profiles>
 		<profile>
 			<id>tomcat-localhost</id>
+			<properties>
+				<profile.name>localhost</profile.name>
+			</properties>
 			<build>
 				<resources>
 					<resource>
@@ -33,6 +36,9 @@
 		</profile>
 		<profile>
 			<id>tomcat-cluster</id>
+			<properties>
+				<profile.name>cluster</profile.name>
+			</properties>
 			<build>
 				<resources>
 					<resource>
@@ -120,6 +126,19 @@
 				<version>3.0.2</version>
 				<configuration>
 					<outputDirectory>${project.basedir}/src/main/resources</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<webResources>
+						<webResource>
+							<directory>src/main/webapp/js/${profile.name}</directory>
+							<targetPath>js</targetPath>
+						</webResource>
+					</webResources>
 				</configuration>
 			</plugin>
 			<plugin>
