--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
+	
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_2.10 -->
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-mllib_2.10</artifactId>
+		    <version>1.3.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
