--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 		    <artifactId>spark-mllib_2.10</artifactId>
 		    <version>1.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-graphx_2.10 -->
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-graphx_2.10</artifactId>
+		    <version>2.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
