--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hadoop.version>2.6.0-cdh5.9.0</hadoop.version>
-		<spark.version>1.6.0-cdh5.9.0</spark.version>
+		<hadoop.version>2.7.3</hadoop.version>
+		<spark.version>2.1.0</spark.version>
 
 		<!-- Run mvn install -Dp.type=war to create a war instead of a jar. -->
 		<p.type>jar</p.type>
@@ -62,6 +62,10 @@
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
 		</repository>
+		<repository>
+			<id>spark-packages</id>
+			<url>https://dl.bintray.com/spark-packages/maven/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -73,13 +77,23 @@
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.10</artifactId>
+			<artifactId>spark-core_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-sql_2.10</artifactId>
+			<artifactId>spark-sql_2.11</artifactId>
 			<version>${spark.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-graphx_2.11</artifactId>
+			<version>${spark.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>graphframes</groupId>
+			<artifactId>graphframes</artifactId>
+			<version>0.3.0-spark2.0-s_2.11</version>
 		</dependency>
 
 		<dependency>
@@ -128,11 +142,26 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.0.0</version>
 				<configuration>
-					<outputDirectory>${project.basedir}/src/main/resources</outputDirectory>
+					<outputFile>${project.basedir}/src/main/resources/${project.name}.jar</outputFile>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+							<resource>.jar</resource>
+						</transformer>
+					</transformers>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
