--- a/pom.xml
+++ b/pom.xml
@@ -62,22 +62,14 @@
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
 		</repository>
-		<repository>
-		    <id>SparkPackagesRepo</id>
-		    <url>http://dl.bintray.com/spark-packages/maven</url>
-		</repository>
 	</repositories>
 
 	<dependencies>
-		  <dependency>
-		    <groupId>graphframes</groupId>
-		    <artifactId>graphframes</artifactId>
-		    <version>0.3.0-spark1.6-s_2.11</version>
-		  </dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
 			<version>${hadoop.version}</version>
+			
 			<exclusions>
 				<exclusion>
 					<groupId>com.sun.jersey</groupId>
@@ -98,6 +90,12 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>${spark.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-graphx_2.10 -->
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-graphx_2.10</artifactId>
+		    <version>1.6.3</version>
 		</dependency>
 
 		<dependency>
